新增: 通知声音调取 优化: 代码优化